Tue Dec 25 12:07:52 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (BASERUBY): delayed error until BASERUBY is used.

Tue Dec 25 11:48:35 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* sample/README: removed obsoleted files: dbmtest.rb,
	  getopts.test, mrshtest.rb, regx.rb.

Tue Dec 25 11:45:34 2007  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/csv.rb:  Import the FasterCSV source as the new CSV class.
	
	* test/csv/*:  Added all applicable tests from FasterCSV.

Tue Dec 25 11:33:52 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (report_bug): uses ruby_description.

Tue Dec 25 11:20:38 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_compile_each): fix stack consistency error.
	  a patch from Yusuke ENDOH <mame AT tsg.ne.jp>  [ruby-dev:32720]

	* bootstraptest/test_syntax.rb: add 2 tests for above.

Tue Dec 25 11:14:20 2007  Koichi Sasada  <ko1@atdot.net>

	* iseq.c, vm_core.h: comment out unused fields.

Tue Dec 25 11:02:10 2007  Koichi Sasada  <ko1@atdot.net>

	* vm.c: check frame is FINAL when creating env.
	  [ruby-core:14395]

	* bootstraptest/test_block.rb: add a test for above.

Tue Dec 25 09:12:13 2007  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/:  Enable RDoc debugging only with $DEBUG_RDOC.

Tue Dec 25 08:37:43 2007  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/csv.rb, test/csv/test_csv.rb:  Removed in preparation for
	FasterCSV code import.

Tue Dec 25 08:27:43 2007  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  Fix test failures.

	* test/rubygems/test_gem.rb:  Fix test failure.

Tue Dec 25 06:23:40 2007  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_knownbug.rb, test_literal.rb: move fixed test.

Tue Dec 25 06:19:04 2007  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* sample/biorhythm.rb: follow Ruby 1.9 libraries.

Tue Dec 25 06:15:01 2007  Koichi Sasada  <ko1@atdot.net>

	* vm.c: add dummy toplevel frame.

Tue Dec 25 05:44:56 2007  Eric Hodel  <drbrain@segment7.net>
